tdf#148109 Paint background color in combobox

If drop down list is not open and only selected item
is shown without having the focus and the property
BASEPROPERTY_NATIVE_WIDGET_LOOK is set to false (default
is true), the background color will be paint.

Change-Id: I210916fbe07f74aaa5835bf2c88e764b010c6d61